@@ -1,3 +1,7 @@
+2001-04-21  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/report/transaction-report.scm: Fixed date bug.
+
 2001-04-21  Dave Peticolas  <dave@krondo.com>
 
 	* src/guile/gnc-helpers.c: more work on scm<->query.
